--- a/movieweb.html
+++ b/movieweb.html
@@ -165,6 +165,8 @@
       </div>
     </div>
     <!-- <div class="grid-container" id="poster"></div> -->
+    <h2 class="text-light container col ">Searched Items</h2>
+
     <div class="result"></div>
 
     <h2 class="text-light container col ">Action Movies</h2>
